4.Introducing-Network-Policies/observability/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-network-policy
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow logging to send logs to loki
    - namespaceSelector:
        matchLabels:
          tier: logging
    # Allow grafana to connect to loki
    - namespaceSelector:
        matchLabels:
          tier: observability
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-network-policy
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
